# kdevelop-encapsulate-field

./: CMakeLists.txt  KDevEncapsulateField.kdev4  kdevencapsulatefield.categories
src/: CMakeLists.txt  encapsulatefield.cpp  encapsulatefield.h  kdevencapsulatefield.json  parameters.cpp  parameters.h  pattern.cpp  pattern.h  patternmodel.cpp  patternmodel.h
src/config/: globalconfigpage.cpp  globalconfigpage.h  globalconfigpage.ui  globalsettings.kcfg  globalsettings.kcfgc  projectconfigpage.cpp  projectconfigpage.h  projectconfigpage.ui  projectsettings.kcfg  projectsettings.kcfgc
